# openbikes

./: .gitignore  Dockerfile  Makefile  README.md  adapters.py  api.py  app.py  cities.txt  clone_data.py  cronjob.yaml  discover_gbfs_apis.py  fetch_stations.py  fetch_weather.py  gbfs_apis.json  pyproject.toml  requirements.txt  tools.py
data/stations/: amiens.json  besancon.json  bruxelles.json  cergy-pontoise.json  creteil.json  dublin.json  lillestrom.json  ljubljana.json  lund.json  luxembourg.json  lyon.json  maribor.json  marseille.json  mulhouse.json  namur.json  nancy.json  nantes.json  rouen.json  santander.json  seville.json  toulouse.json  toyama.json  valence.json  vilnius.json
data/weather/: amiens.json  besancon.json  brisbane.json  bruxelles.json  cergy-pontoise.json  creteil.json  dublin.json  lillestrom.json  ljubljana.json  lund.json  luxembourg.json  lyon.json  maribor.json  marseille.json  mulhouse.json  namur.json  nancy.json  nantes.json  rouen.json  santander.json  seville.json  stockholm.json  toulouse.json  toyama.json  valence.json  vilnius.json
templates/: index.html
